[package]
name = "dshot-pio"
version = "0.4.0"
edition = "2021"

[features]
embassy-rp = ["dep:embassy-rp", "embassy-rp/rp235xa"]
rp2040-hal = ["dep:rp2040-hal"]

[dependencies]
dshot-encoder = { git = "https://github.com/peterkrull/dshot-encoder" }

pio-proc = "0.2"
pio = "0.2"

rp2040-hal = { version = "0.11", optional = true }
embassy-rp = { version = "0.4.0", git = "https://github.com/embassy-rs/embassy", rev = "206a324cf4d612122356fb350b4a3b56391d6f20", optional = true }
